--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,17 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
-
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1565409973597999"
+      crossorigin="anonymous"></script>
+  <ins class="adsbygoogle"
+      style={{display: "block"}}
+      data-ad-client="ca-pub-1565409973597999"
+      data-ad-slot="9111976133"
+      data-ad-format="auto"
+      data-full-width-responsive="true"></ins>
+  <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
     </div>
   </body>
 </html>
